--- a/app/src/main/res/layout/map_run_show.xml
+++ b/app/src/main/res/layout/map_run_show.xml
@@ -18,10 +18,10 @@
             android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/begin_button"
-                android:layout_width="match_parent"
+                android:id="@+id/snapsshot"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="kaishi"/>
+                android:text="截屏保存" />
 
         </LinearLayout>
     </FrameLayout>
